updated metrics to show score (scaled by days and num users in that postcode)
